--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>YouTube client</title>
 </head>
 <body>
-<script src="youtube-client.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
